<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="false"
    tools:context=".Activity.IntroActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:id="@+id/imageView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:scaleType="centerCrop"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    android:contentDescription="@string/introimage"
                    app:srcCompat="@drawable/intro_pic" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="-90dp"
                    android:orientation="vertical"
                    android:background="@drawable/top_corner_white"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/imageView">

                    <TextView
                        android:id="@+id/textView"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textSize="43sp"
                        android:textStyle="bold"
                        android:textAlignment="center"
                        android:textColor="@color/black"
                        android:layout_marginTop="16dp"
                        android:text="@string/explore_the_nworld_with_us" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColor="@color/darkGrey"
                        android:textAlignment="center"
                        android:textSize="16sp"
                        android:layout_marginTop="16dp"
                        android:text="@string/intro_heading"
                        android:id="@+id/textView2"/>

                    <androidx.appcompat.widget.AppCompatButton
                        android:layout_marginHorizontal="32dp"
                        android:layout_marginTop="16dp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/introBtn"
                        android:text="@string/start"
                        android:textSize="20sp"
                        style="@android:style/Widget.Button"
                        android:background="@drawable/blue_btn_bg"/>

                    <androidx.appcompat.widget.AppCompatButton
                        android:background="@drawable/stroke_blue_bg"
                        style="@android:style/Widget.Button"
                        android:textSize="20sp"
                        android:textColor="@color/blue"
                        android:id="@+id/loginBtn"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="Login"
                        android:layout_marginVertical="16dp"
                        android:layout_marginHorizontal="32dp"
                        />


                </LinearLayout>
            </androidx.constraintlayout.widget.ConstraintLayout>
        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>