<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activity.MainActivity">

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:fillViewport="true"
        app:layout_constraintBottom_toTopOf="@+id/chipnav"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:orientation="vertical">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/imageView2"
                    android:layout_width="0dp"
                    android:layout_height="300dp"
                    android:contentDescription="@string/app_name"
                    android:scaleType="centerCrop"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:srcCompat="@drawable/main_pic" />

                <ImageView
                    android:id="@+id/imageView3"
                    android:layout_width="0dp"
                    android:layout_height="60dp"
                    android:contentDescription="@string/app_name"
                    app:layout_constraintBottom_toBottomOf="@+id/imageView2"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:srcCompat="@drawable/gradient_white_bg" />

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/constraintlayout"
                    android:layout_width="0dp"
                    android:layout_height="56dp"
                    android:layout_marginStart="32dp"
                    android:layout_marginTop="60dp"
                    android:layout_marginEnd="32dp"
                    android:background="@drawable/white_corner_bg"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <EditText
                        android:id="@+id/editTextText"
                        android:layout_width="0dp"
                        android:layout_height="0dp"
                        android:autofillHints="postalAddress"
                        android:background="@android:color/transparent"
                        android:drawableStart="@drawable/search_icon"
                        android:drawablePadding="8dp"
                        android:hint="@string/search"
                        android:inputType="text"
                        android:paddingStart="16dp"
                        android:paddingEnd="100dp"
                        android:textColorHint="@color/darkBlue"
                        android:textSize="16sp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <androidx.appcompat.widget.AppCompatButton
                        android:id="@+id/searchBtn"
                        style="@android:style/Widget.Button"
                        android:layout_width="85dp"
                        android:layout_height="0dp"
                        android:layout_margin="4dp"
                        android:background="@drawable/blue_btn_bg"
                        android:text="@string/search"
                        android:textColor="@color/white"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                </androidx.constraintlayout.widget.ConstraintLayout>

                <TextView
                    android:id="@+id/textView3"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="32dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="32dp"
                    android:text="@string/enjoy"
                    android:textColor="@color/white"
                    android:textSize="30sp"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/constraintlayout" />

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/categoryCard"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="24dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="24dp"
                    android:layout_marginBottom="32dp"
                    android:background="@drawable/white_corner_bg2"
                    android:elevation="4dp"
                    android:minHeight="200dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textView3">

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/recyclerViewCategory"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:paddingHorizontal="16dp"
                        android:paddingVertical="16dp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <ProgressBar
                        android:id="@+id/progressBarCategory"
                        style="?android:attr/progressBarStyle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                </androidx.constraintlayout.widget.ConstraintLayout>
            </androidx.constraintlayout.widget.ConstraintLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingStart="32dp"
                android:paddingTop="24dp"
                android:paddingEnd="32dp"
                android:paddingBottom="16dp">

                <TextView
                    android:id="@+id/textView4"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/popular_stays"
                    android:textColor="@color/black"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/textView5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/see_all"
                    android:textColor="@color/blue"
                    android:textSize="14sp" />

            </LinearLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="16dp">

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/recyclerViewPopular"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:clipToPadding="false"
                    android:paddingStart="16dp"
                    android:paddingEnd="16dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <ProgressBar
                    android:id="@+id/progressBarPopular"
                    style="?android:attr/progressBarStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </LinearLayout>

    </ScrollView>

    <com.ismaeldivita.chipnavigation.ChipNavigationBar
        android:id="@+id/chipnav"
        android:layout_width="0dp"
        android:layout_height="64dp"
        android:background="@color/white"
        app:cnb_menuResource="@menu/bottom_menu"
        app:cnb_textAppearance="@style/BottomNavTextStyle"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>